--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@
 
 // Global default params, used in configs
 params {
-  version = '1.0dev' //Pipeline version
+  version = '1.0' //Pipeline version
   nf_required_version = '0.30.1' //Minimum version of Nextflow required
   container = 'nfcore/chipseq:latest' // Container slug. Stable releases should specify release tag!
 
@@ -27,6 +27,7 @@ params {
   saveAlignedIntermediates = false
   saturation = false
   broad = false
+  largeRef = false
   blacklist_filtering = false
   outdir = './results'
   igenomes_base = "./iGenomes"
