--- a/conf/uppmax-modules.config
+++ b/conf/uppmax-modules.config
@@ -11,6 +11,8 @@ singularity {
 process {
 
   // Environment modules and resource requirements
+  withName:makeBWAindex.module = ['bioinfo-tools', 'bwa/0.7.17']
+  withName:makeGenomeSizeTable.module = ['bioinfo-tools', 'BEDTools/2.27.1']
   withName:fastqc.module = ['bioinfo-tools', 'FastQC/0.11.5']
   withName:trim_galore.module = ['bioinfo-tools', 'TrimGalore/0.4.4', 'FastQC/0.11.5']
   withName:bwa.module = ['bioinfo-tools', 'bwa/0.7.17', 'samtools/1.8']
