--- a/environment.yml
+++ b/environment.yml
@@ -1,46 +1,46 @@
-# You can use this file to create a conda environment for this pipeline:
-#   conda env create -f environment.yml
-name: nf-core-chipseq-1.0
+name: nf-core-chipseq-1.0dev
 channels:
-  - bioconda
   - conda-forge
+  - bioconda
   - defaults
 dependencies:
-  - conda-forge::openjdk=8.0.144 # Needed for FastQC - conda build hangs without this
-  - fastqc=0.11.7
-  - trim-galore=0.5.0
-  - bwa=0.7.17
+  ## conda-forge packages
+  - conda-forge::openjdk=11.0.1      # Needed for FastQC - conda build hangs without this
   - conda-forge::gawk=4.2.1
-  - conda-forge::r-markdown=0.8
-  - bioconda::r-spp=1.15.2
-  - bedtools=2.27.1
-  - samtools=1.9
-  - picard=2.18.11
-  - deeptools=3.1.2
-  - macs2=2.1.1.20160309
-  - multiqc=1.6
+  - conda-forge::r-markdown=0.9
   - conda-forge::r-catools=1.17.1.1
-  - conda-forge::r-snow=0.4_2
-  - conda-forge::r-r.utils=2.6.0
+  - conda-forge::r-snow=0.4_3
+  - conda-forge::r-r.utils=2.7.0
   - conda-forge::r-stringr=1.3.1
-  - conda-forge::r-markdown=0.8
-  - conda-forge::r-evaluate=0.10.1
+  - conda-forge::r-evaluate=0.12
   - conda-forge::r-domc=1.3.5
-  - conda-forge::r-ggplot2=3.0.0
-  - conda-forge::r-knitr=1.20
+  - conda-forge::r-ggplot2=3.1.0
+  - conda-forge::r-knitr=1.21
   - conda-forge::r-rmysql=0.10.13
   - conda-forge::r-doparallel=1.0.11
-  - bioconda::bioconductor-bsgenome=1.46.0
-  - bioconda::bioconductor-rsamtools=1.30.0
-  - bioconda::bioconductor-shortread=1.36.0
-  - bioconda::bioconductor-genomicranges=1.30.3
-  - bioconda::bioconductor-genomicfeatures=1.30.3
-  - bioconda::bioconductor-ensembldb=2.2.2
-  - bioconda::bioconductor-chippeakanno=3.12.0
-  - bioconda::bioconductor-biomart=2.34.2
-  - bioconda::bioconductor-rtracklayer=1.38.3
+
+  ## bioconda packages
+  - fastqc=0.11.8
+  - trim-galore=0.5.0
+  - bwa=0.7.17
+  - bedtools=2.27.1
+  - samtools=1.9
+  - picard=2.18.13
+  - deeptools=3.1.3
+  - macs2=2.1.2
+  - multiqc=1.7
+  
+  - bioconda::r-spp=1.15.5
+  - bioconda::bioconductor-rsamtools=1.34.0
+  - bioconda::bioconductor-shortread=1.40.0
+  - bioconda::bioconductor-genomicranges=1.34.0
+  - bioconda::bioconductor-genomicfeatures=1.34.1
+  - bioconda::bioconductor-ensembldb=2.6.3
+  - bioconda::bioconductor-chippeakanno=3.16.0
+  - bioconda::bioconductor-biomart=2.38.0
+  - bioconda::bioconductor-rtracklayer=1.42.1
+  - bioconda::bioconductor-bsgenome=1.50.0
   - bioconda::bioconductor-bsgenome.hsapiens.ucsc.hg19=1.4.0
-  - bioconda::bioconductor-org.hs.eg.db=3.5.0
   - bioconda::bioconductor-bsgenome.mmusculus.ucsc.mm10=1.4.0
-  - bioconda::bioconductor-org.mm.eg.db=3.5.0
-  - bioconda::r-spp=1.15.2
+  - bioconda::bioconductor-org.hs.eg.db=3.7.0
+  - bioconda::bioconductor-org.mm.eg.db=3.7.0
