--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ before_install:
   # PRs to master are only ok if coming from dev branch
   - '[ $TRAVIS_PULL_REQUEST = "false" ] || [ $TRAVIS_BRANCH != "master" ] || ([ $TRAVIS_PULL_REQUEST_SLUG = $TRAVIS_REPO_SLUG ] && [ $TRAVIS_PULL_REQUEST_BRANCH = "dev" ])'
   # Pull the docker image first so the test doesn't wait for this
-  - docker pull nfcore/chipseq
+  - docker pull nfcore/chipseq:dev
   # Fake the tag locally so that the pipeline runs properly
-  - docker tag nfcore/chipseq nfcore/chipseq:latest
+  - docker tag nfcore/chipseq:dev nfcore/chipseq:latest
 
 install:
   # Install Nextflow
@@ -21,18 +21,17 @@ install:
   - wget -qO- get.nextflow.io | bash
   - sudo ln -s /tmp/nextflow/nextflow /usr/local/bin/nextflow
   # Install nf-core/tools
+  - pip install --upgrade pip # Get rid of dependency resolve issues from older pip versions
   - pip install nf-core
   # Reset
   - mkdir ${TRAVIS_BUILD_DIR}/tests && cd ${TRAVIS_BUILD_DIR}/tests
 
 env:
-  - NXF_VER='0.31.1' # Specify a minimum NF version that should be tested and work
+  - NXF_VER='0.32.0' # Specify a minimum NF version that should be tested and work
   - NXF_VER='' # Plus: get the latest NF version and check that it works
 
 script:
   # Lint the pipeline code
-  - "nf-core lint ${TRAVIS_BUILD_DIR}"
-  # Run, build reference genome
-  - travis_wait 20 nextflow run ${TRAVIS_BUILD_DIR} -profile test,docker --saveReference
-  # Basic run with supplied reference
-  - travis_wait 20 nextflow run ${TRAVIS_BUILD_DIR} -profile test,docker --bwa_index ${TRAVIS_BUILD_DIR}/tests/results/reference_genome/BWAIndex/
+  - nf-core lint ${TRAVIS_BUILD_DIR}
+  # Run the pipeline with the test profile
+  - nextflow run ${TRAVIS_BUILD_DIR} -profile test,docker
