--- a/conf/base.config
+++ b/conf/base.config
@@ -23,7 +23,7 @@ process {
   container = params.container
 
   cpus = { check_max( 1 * task.attempt, 'cpus' ) }
-  memory = { check_max( 8.GB * task.attempt, 'memory' ) }
+  memory = { check_max( 2.GB * task.attempt, 'memory' ) }
   time = { check_max( 2.h * task.attempt, 'time' ) }
 
   errorStrategy = { task.exitStatus in [143,137] ? 'retry' : 'terminate' }
@@ -36,54 +36,20 @@ process {
     memory = { check_max( 16.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  withName:bwa {
+  withLabel:process_big {
     cpus = { check_max( 8 * task.attempt, 'cpus' ) }
     memory = { check_max( 64.GB * task.attempt, 'memory' ) }
     time = { check_max( 24.h * task.attempt, 'time' ) }
   }
-  withName:samtools {
+  withLabel:process_medium {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  withName:bwa_mapped {
-    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
-    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
-    time = { check_max( 8.h * task.attempt, 'time' ) }
-  }
-  withName:picard {
-    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
-    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
-    time = { check_max( 8.h * task.attempt, 'time' ) }
-  }
-  withName:countstat {
-    time = { check_max( 8.h * task.attempt, 'time' ) }
-  }
-  withName:phantompeakqualtools {
-    time = { check_max( 8.h * task.attempt, 'time' ) }
-  }
-  withName:deepTools {
-    cpus = { check_max( 8 * task.attempt, 'cpus' ) }
-    memory = { check_max( 64.GB * task.attempt, 'memory' ) }
-    time = { check_max( 24.h * task.attempt, 'time' ) }
-  }
-  withName:macs {
-    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
-    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
-    time = { check_max( 8.h * task.attempt, 'time' ) }
-  }
-  withName:saturation {
-    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
-    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
+  withLabel:process_long {
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
   withName:get_software_versions {
-    memory = { check_max( 2.GB * task.attempt, 'memory' ) }
-    errorStrategy = 'ignore'
     cache = false
-  }
-  withName:multiqc {
-    memory = { check_max( 2.GB * task.attempt, 'memory' ) }
-    errorStrategy = 'ignore'
   }
 }
