--- a/conf/modules.config
+++ b/conf/modules.config
@@ -4,55 +4,79 @@
  * -------------------------------------------------
  */
 params {
-  modules {
-    'fastqc' {
-      args             = "--quiet"
-      suffix           = ""
-      publish_dir      = "fastqc"
-      publish_results  = "all"
+    modules {
+        'fastqc' {
+            args             = "--quiet"
+            suffix           = ""
+            publish_dir      = "fastqc"
+            publish_results  = "all"
+        }
+        'trim_galore' {
+            args             = "--fastqc"
+            suffix           = ""
+            publish_dir      = "trim_galore"
+            publish_results  = "all"
+        }
+        'bwa_index' {
+            args             = "-a bwtsw"
+            suffix           = ""
+            publish_dir      = "genome/bwa_index"
+            publish_results  = "all"
+        }
+        'gtf2bed' {
+            args             = ""
+            suffix           = ""
+            publish_dir      = "genome"
+            publish_results  = "all"
+        }
+        'make_genome_filter' {
+            args             = ""
+            suffix           = ""
+            publish_dir      = "genome"
+            publish_results  = "all"
+        }
+        'get_chrom_sizes' {
+            args             = ""
+            suffix           = ""
+            publish_dir      = "genome"
+            publish_results  = "all"
+        }
+        'bwa_mem' {
+            args             = "-M"
+            args2            = "-h -F 0x0100 -O BAM"
+            suffix           = ".Lb"
+            publish_dir      = "bwa/library"
+            publish_results  = "all"
+        }
+        'samtools_sort_lib' {
+            args             = ""
+            suffix           = ".Lb.sorted"
+            publish_dir      = "bwa/library"
+            publish_results  = "all"
+        }
+        'picard_mergesamfiles' {
+            args             = "SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+            suffix           = ".mLb.sorted"
+            publish_dir      = "bwa/mergedLibrary"
+            publish_results  = "all"
+        }
+        'picard_markduplicates' {
+            args             = "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+            suffix           = ".mLb.mkD"
+            publish_dir      = "bwa/mergedLibrary"
+            publish_results  = "all"
+        }
+        'samtools_sort_merged_lib' {
+            args             = ""
+            suffix           = ".mLb.mkD.sorted"
+            publish_dir      = "bwa/mergedLibrary"
+            publish_results  = "all"
+        }
+        'picard_collectmultiplemetrics' {
+            args             = ""
+            suffix           = ".mLb.sorted"
+            publish_dir      = "bwa/mergedLibrary/picard_metrics"
+            publish_results  = "all"
+        }
     }
-    'trim_galore' {
-      args             = "--fastqc"
-      suffix           = ""
-      publish_dir      = "trim_galore"
-      publish_results  = "all"
-    }
-    'bwa_index' {
-      args             = "-a bwtsw"
-      suffix           = ""
-      publish_dir      = "genome/bwa_index"
-      publish_results  = "all"
-    }
-    'gtf2bed' {
-      args             = ""
-      suffix           = ""
-      publish_dir      = "genome"
-      publish_results  = "all"
-    }
-    'make_genome_filter' {
-      args             = ""
-      suffix           = ""
-      publish_dir      = "genome"
-      publish_results  = "all"
-    }
-    'get_chrom_sizes' {
-      args             = ""
-      suffix           = ""
-      publish_dir      = "genome"
-      publish_results  = "all"
-    }
-    'bwa_mem' {
-      args             = "-M"
-      args2            = "-h -F 0x0100 -O BAM"
-      suffix           = ".Lb"
-      publish_dir      = "bwa"
-      publish_results  = "all"
-    }
-    'samtools_sort_lib' {
-      args             = ""
-      suffix           = ".Lb.sorted"
-      publish_dir      = "bwa"
-      publish_results  = "all"
-    }
-  }
 }
