--- a/conf/modules.config
+++ b/conf/modules.config
@@ -5,6 +5,12 @@
  */
 params {
     modules {
+        'check_samplesheet' {
+            args             = ""
+            suffix           = ""
+            publish_dir      = "pipeline_info"
+            publish_results  = "all"
+        }
         'fastqc' {
             args             = "--quiet"
             suffix           = ""
@@ -72,10 +78,34 @@ params {
             publish_dir      = "bwa/mergedLibrary"
             publish_results  = "all"
         }
-        'picard_collectmultiplemetrics' {
+        'filter_bam' {
             args             = ""
-            suffix           = ".mLb.sorted"
+            suffix           = ".mLb.flT.sorted"
+            publish_dir      = "bwa/mergedLibrary"
+            publish_results  = "all"
+        }
+        'samtools_sort_filter' {
+            args             = ""
+            suffix           = ".mLb.flT.sorted"
+            publish_dir      = "bwa/mergedLibrary"
+            publish_results  = "all"
+        }
+        'picard_collectmultiplemetrics' {
+            args             = "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+            suffix           = ".mLb.mkD.sorted"
             publish_dir      = "bwa/mergedLibrary/picard_metrics"
+            publish_results  = "all"
+        }
+        'get_software_versions' {
+            args             = ""
+            suffix           = ""
+            publish_dir      = "pipeline_info"
+            publish_results  = "all"
+        }
+        'output_documentation' {
+            args             = ""
+            suffix           = ""
+            publish_dir      = "pipeline_info"
             publish_results  = "all"
         }
     }
